--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -243,6 +243,16 @@
     </dependency>
     <dependency>
       <groupId>com.oracle.ojdbc</groupId>
+      <artifactId>osdt_cert</artifactId>
+      <version>19.3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.ojdbc</groupId>
+      <artifactId>osdt_core</artifactId>
+      <version>19.3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.ojdbc</groupId>
       <artifactId>ucp</artifactId>
       <version>19.3.0.0</version>
     </dependency>
