--- a/dev/com.ibm.ws.wssecurity_fat.wsscxf.saml.2/build.gradle
+++ b/dev/com.ibm.ws.wssecurity_fat.wsscxf.saml.2/build.gradle
@@ -22,6 +22,7 @@ dependencies {
                'httpunit:httpunit:1.6.2',                           
                'jtidy:jtidy:4aug2000r7-dev',
                'rhino:js:1.6R5',
+               'xml-apis:xml-apis:1.4.01',
                'net.sourceforge.htmlunit:htmlunit-cssparser:1.6.0',
                'org.brotli:dec:0.1.2',
                'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
