Revert "Improve incremental build"

--- a/dev/com.ibm.websphere.appserver.features/build.gradle
+++ b/dev/com.ibm.websphere.appserver.features/build.gradle
@@ -67,7 +67,7 @@ rootProject.ext.betaFeatures = {
     betaFeatures
 }
 
-copyPiiFiles {
+task copyFeaturePiiFiles {
   doLast {
     def featureFiles = fileTree(dir: project.projectDir, include: 'visibility/**/*.feature')
     featureFiles.each { featureFile ->
@@ -89,6 +89,8 @@ copyPiiFiles {
     }
   }
 }
+
+copyPiiFiles.dependsOn copyFeaturePiiFiles
 
 Set<String> obtain(Map<String, Set<String>> featureToEditions, String edition) {
   Set<String> features = featureToEditions.get(edition)
