--- a/dev/ant_build.js/.project
+++ b/dev/ant_build.js/.project
@@ -2,5 +2,22 @@
 <projectDescription>
 	<name>ant_build.js</name>
 	<comment></comment>
-	<projects></projects>
+	<projects>
+	</projects>
+	<buildSpec>
+		<buildCommand>
+			<name>org.eclipse.jdt.core.javabuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>bndtools.core.bndbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+	</buildSpec>
+	<natures>
+		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>bndtools.core.bndnature</nature>
+	</natures>
 </projectDescription>
