--- a/dev/gradle.properties
+++ b/dev/gradle.properties
@@ -39,7 +39,7 @@ org.gradle.jvmargs=-Xmx2560M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF
 systemProp.com.ibm.jsse2.overrideDefaultTLS=true
 
 # When the build cache is enabled, it will store build outputs in the Gradle user home.
-org.gradle.caching=true
+org.gradle.caching=false
 
 # Tweaks to better handle Artifactory connection flakiness.
 systemProp.org.gradle.internal.http.connectionTimeout=180000
