--- a/dev/settings.gradle
+++ b/dev/settings.gradle
@@ -37,7 +37,9 @@ pluginManagement {
   }
 
   // This is to support more controlled dependency management if we are able to access particular internal systems.
-  boolean isUsingArtifactory = (usrHomeProps.exists() && !props.getProperty('artifactory.force.external.repo') && props.getProperty('artifactory.download.server') != null)
+  boolean isUsingArtifactory = (usrHomeProps.exists()
+                                && !Boolean.parseBoolean(props.getProperty('artifactory.force.external.repo'))
+                                && props.getProperty('artifactory.download.server'))
   props.setProperty('is.using.artifactory', isUsingArtifactory.toString())
 
   String repoURL = ('https://' + props.getProperty('artifactory.download.server') + '/artifactory/wasliberty-open-liberty')
