--- a/.github/workflows/openliberty-ci.yml
+++ b/.github/workflows/openliberty-ci.yml
@@ -1,10 +1,6 @@
 name: OpenLiberty CI
 
 on:
-  schedule:
-  # Runs at the begining of every week day.
-  # The daily build will be a good way to check to make sure build breaks don't get introduced to the GH actions build.
-  - cron: '0 0 * * 1-5'
   pull_request:
     branches: 
     - integration
@@ -20,28 +16,28 @@ on:
       - 'cla/**'
       - 'images/**'
       - 'logos/**'
+
 env:
   LANG: en_US.UTF-8
+
 jobs:
 
   validate: #Perform validation before any other jobs run.  If we fail validation, don't run anything else.
     name: Validation
     runs-on: ubuntu-18.04
     # Do not run on draft PRs
-    # Do not run scheduled builds on forked repos
     if: |
-      github.event_name == 'pull_request' && (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed') ||
-      github.event_name == 'schedule' && github.repository == 'OpenLiberty/open-liberty'
+      github.event_name == 'pull_request' &&
+      (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed')
     steps:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 50
     - name: Validate copyright headers
-      # Only validate copyright headers on Pull Requests
-      if: "github.event_name == 'pull_request'"
       run: .github/workflow-scripts/validate-copyright-headers.sh
     - name: Validate tests
       run: .github/workflow-scripts/validate-tests.sh
+
 
   build: #Main build always done on linix run in parallel to setup and unit-test
     name: Build Open Liberty
@@ -53,10 +49,9 @@ jobs:
       test-java: ${{ steps.gen-params.outputs.test-java }}
       modified-categories: ${{ steps.gen-params.outputs.modified-categories }}
     # Do not run on draft PRs
-    # Do not run scheduled builds on forked repos
     if: |
-      github.event_name == 'pull_request' && (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed') ||
-      github.event_name == 'schedule' && github.repository == 'OpenLiberty/open-liberty'
+      github.event_name == 'pull_request' &&
+      (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed')
     steps:
     - uses: actions/checkout@v2
       with:
@@ -123,10 +118,9 @@ jobs:
     runs-on: ubuntu-18.04
     timeout-minutes: 60
     # Do not run on draft PRs
-    # Do not run scheduled builds on forked repos
     if: |
-      github.event_name == 'pull_request' && (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed') ||
-      github.event_name == 'schedule' && github.repository == 'OpenLiberty/open-liberty'
+      github.event_name == 'pull_request' &&
+      (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed')
     steps:
     - uses: actions/checkout@v2
       with:
@@ -181,16 +175,15 @@ jobs:
         path: "dev/unit-results/TEST-*.xml"
         includeSummary: true
         numFailures: 100 # Truncate number of failures so we don't run out of annoations.
-        
+
   fat_tests: #Runs parallel jobs for each FAT category. JDK version and OS are dependent on setup
     name: FAT Tests - ${{matrix.category}}
     needs: [validate, build]
     runs-on: ${{ needs.build.outputs.test-os }}
     # Do not run on draft PRs
-    # Do not run scheduled builds on forked repos
     if: |
-      github.event_name == 'pull_request' && (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed') ||
-      github.event_name == 'schedule' && github.repository == 'OpenLiberty/open-liberty'
+      github.event_name == 'pull_request' &&
+      (github.event.pull_request.draft == false && github.event.pull_request.state != 'closed')
     strategy:
       fail-fast: false
       max-parallel: 19
