--- a/dev/com.ibm.ws.grpc_fat/build.gradle
+++ b/dev/com.ibm.ws.grpc_fat/build.gradle
@@ -54,6 +54,8 @@ configurations {
   storeAppWarLibs
 }
 
+def grpcVersion = '1.36.1'
+
 dependencies {
  
  	// Adding libraries the application to run in FAT
@@ -76,10 +78,10 @@ dependencies {
     //
     implementation 'com.google.protobuf:protobuf-java-util:3.13.0'
     // @jar is needed since some of the dependencies of java-util were overwritten
-    providedCompile 'io.grpc:grpc-protobuf:1.35.0@jar'
-    compileOnly 'io.grpc:grpc-stub:1.35.0'
-    providedCompile 'io.grpc:grpc-services:1.35.0@jar'
-    providedCompile 'io.grpc:grpc-netty:1.35.0@jar'
+    providedCompile 'io.grpc:grpc-protobuf:' + grpcVersion + '@jar'
+    compileOnly 'io.grpc:grpc-stub:' + grpcVersion
+    providedCompile 'io.grpc:grpc-services:' + grpcVersion + '@jar'
+    providedCompile 'io.grpc:grpc-netty:' + grpcVersion + '@jar'
     //dynamic caching map
     implementation 'com.ibm.websphere.appserver.api:com.ibm.websphere.appserver.api.distributedMap:2.0.37'
 	
@@ -107,19 +109,18 @@ dependencies {
       'commons-codec:commons-codec:1.6',
       'commons-logging:commons-logging:1.1.3',
       'xml-apis:xml-apis:1.4.01',
-      'io.grpc:grpc-core:1.35.0',
-      'io.grpc:grpc-stub:1.35.0',
-      'io.grpc:grpc-protobuf:1.35.0',
-      'io.grpc:grpc-netty:1.35.0',
+      'io.grpc:grpc-core:' + grpcVersion,
+      'io.grpc:grpc-stub:' + grpcVersion,
+      'io.grpc:grpc-protobuf:' + grpcVersion,
+      'io.grpc:grpc-netty:' + grpcVersion,
       'com.google.protobuf:protobuf-java:3.13.0',
       'com.google.protobuf:protobuf-java-util:3.13.0'
 }
 
 protobuf {
-	
     protoc { artifact = "com.google.protobuf:protoc:3.13.0" }
     plugins {
-        grpc { artifact = "io.grpc:protoc-gen-grpc-java:1.35.0" }
+        grpc { artifact = "io.grpc:protoc-gen-grpc-java:" + grpcVersion }
     }
     generateProtoTasks {
         all()*.plugins { 
