--- a/dev/com.ibm.ws.security.saml.sso_fat.common/SAMLCommon.gradle
+++ b/dev/com.ibm.ws.security.saml.sso_fat.common/SAMLCommon.gradle
@@ -84,7 +84,7 @@ task copyShibbolethServer (dependsOn: [':com.ibm.ws.security.fat.common:assemble
 //    into new File(autoFvtDir, "publish/servers/${serverName}/policyFiles")
 //  }
     // copyShibbolethTestAppFilesToServer
-    if (JavaVersion.current() < JavaVersion.VERSION_1_11) {
+    if (JavaVersion.current() < JavaVersion.VERSION_11) {
 	    println 'in less than Java 11'
    	 	copy {
 	 	  from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp-war-3.3.1.war')
@@ -139,7 +139,7 @@ task copyApache (dependsOn: [':com.ibm.ws.security.fat.common:assemble', ':com.i
      *    an older version of Shibboleth (we're using 3.3.1) For Java 15 and above, we 'have' to use version 4.1.0, but that version
      *    will work on anything above Java 10
      */
-    if (JavaVersion.current() < JavaVersion.VERSION_1_11) {
+    if (JavaVersion.current() < JavaVersion.VERSION_11) {
 	    println 'in less than Java 11'
     	copy {
       		from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, '3.3.1')
