--- a/dev/wlp-gradle/subprojects/fat.gradle
+++ b/dev/wlp-gradle/subprojects/fat.gradle
@@ -55,7 +55,7 @@ dependencies {
 		'com.microsoft.sqlserver:mssql-jdbc:8.2.1.jre8',
 		'org.apache.derby:derbyclient:10.11.1.1',
 		'org.apache.derby:derby:10.11.1.1',
-		'com.oracle.ojdbc:ojdbc8_g:19.3.0.0'
+		'com.oracle.database.jdbc.debug:ojdbc8_g:21.1.0.0'
 
   // this will inherit from the 'testcontainers' config
   databaseRotationDrivers "org.testcontainers:database-commons:${testcontainersVersion}",
