Remove the EE9 skipped FAT tests from com.ibm.ws.jaxrs.2.1.client_fat JAXRS21ClientCXFRxInvokerTest

--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -2353,6 +2353,11 @@
     </dependency>
     <dependency>
       <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-rxjava2</artifactId>
+      <version>4.5.8.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-servlet-initializer</artifactId>
       <version>4.5.8.Final</version>
     </dependency>
