--- a/dev/com.ibm.ws.microprofile.openapi.1.1_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/com.ibm.ws.microprofile.openapi.1.1_fat_tck/publish/tckRunner/tck/pom.xml
@@ -88,7 +88,7 @@
         <dependency>
             <groupId>org.jboss.arquillian.testng</groupId>
             <artifactId>arquillian-testng-container</artifactId>
-            <version>${arquillian.version}</version>
+            <version>1.1.14.Final</version>
             <scope>test</scope>
         </dependency>
         <dependency>
