Update file name & transformation

--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -68,7 +68,7 @@ com.ibm.ws.jsp.v23.dd.xml=jakarta-jspVersion.properties
 #Faces
 com.ibm.ws.myfaces.initializer.xml=jakarta-faces-initialization.properties
 com.ibm.ws.org.apache.myfaces_1_0.ResourceProvider.xml=jakarta-faces-initialization.properties
-com.ibm.ws.jsf_3_0.cdiextension.xml=jakarta-faces-initialization.properties
+com.ibm.ws.jsf.cdiextension.xml=jakarta-faces-initialization.properties
 faces-config.xml=jakarta-faces-config.properties
 JSF23APIConstants.xhtml=jakarta-facelet.properties
 full-config.xml=jakarta-faces-config.properties
