--- a/dev/com.ibm.ws.security.saml.sso_fat.common/build.gradle
+++ b/dev/com.ibm.ws.security.saml.sso_fat.common/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     /*
      * These dependencies will be used for the shibboleth IDP server.
      */
-    shibbolethIdp331 'ch.qos.logback:logback-classic:1.2.3',
+    shibbolethIdp331 'ch.qos.logback:logback-classic:1.1.3',
                   'net.shibboleth.idp:idp-war:3.3.1',
                   'org.slf4j:jcl-over-slf4j:1.7.12'
 
@@ -252,7 +252,7 @@ task updateIdp_3_x_WAR(type: Zip, dependsOn: copy_331_IDP) {
   from (zipTree(originalWar))
   
   from (downloadDir) {
-    include 'jcl-over-slf4j-1.7.12.jar', 'logback-classic-*.jar'
+    include 'jcl-over-slf4j-1.7.12.jar', 'logback-classic-1.1.3.jar'
     into 'WEB-INF/lib'
   }
   
@@ -271,7 +271,7 @@ task updateIdp_4_0_x_WAR(type: Zip, dependsOn: copy_40x_IDP) {
   }
   
   from (downloadDir) {
-    include 'jcl-over-slf4j-1.7.25.jar', 'logback-classic-*.jar', 'janino-2.5.10.jar'
+    include 'jcl-over-slf4j-1.7.25.jar', 'logback-classic-1.2.3.jar', 'janino-2.5.10.jar'
     into 'WEB-INF/lib'
   }
   
@@ -296,7 +296,7 @@ task updateIdp_4_1_x_WAR(type: Zip, dependsOn: copy_41x_IDP) {
   }
  
   from (downloadDir) {
-    include 'jcl-over-slf4j-1.7.30.jar', 'logback-classic-*.jar', 'janino-3.1.3.jar', 'commons-compiler-3.1.3.jar'
+    include 'jcl-over-slf4j-1.7.30.jar', 'logback-classic-1.2.3.jar', 'janino-3.1.3.jar', 'commons-compiler-3.1.3.jar'
     into 'WEB-INF/lib'
   }
   // jars needed for javascript support removal from Java
