--- a/dev/com.ibm.ws.wssecurity_fat.wsscxf.saml.2/build.gradle
+++ b/dev/com.ibm.ws.wssecurity_fat.wsscxf.saml.2/build.gradle
@@ -286,9 +286,7 @@ autoFVT.doLast {
     }
   
     copy {
-    //Need to use the updated version of perperties for java2sec exempt on this server; instead of directly copying from sso fat common
-    //from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/servers/' + server + '/bootstrap.properties')
-    from project.file('publish/files/bootstrap.properties')
+    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/servers/' + server + '/bootstrap.properties')
     into new File(autoFvtDir, 'publish/servers/' + server + '/')
     }
     
@@ -299,14 +297,19 @@ autoFVT.doLast {
     }
 
     copy {
-    from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
-    into new File(autoFvtDir, 'publish/servers/' + server + '/dropins')
+      from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
+      into new File(autoFvtDir, 'publish/servers/' + server + '/dropins')
     }
     
-    copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp.war')
-    into new File(autoFvtDir, 'publish/servers/' + server + '/test-apps')
-    }
+    // copyShibbolethTestAppFilesToServer  (copy both 3.3.1 and 4.1.0 and let the tests decide at runtime which to use)
+   	copy {
+	  from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp-war-3.3.1.war')
+ 	  into new File(autoFvtDir, "publish/servers/${server}/test-apps")
+	}
+	copy {
+	  from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp-war-4.1.0.war')
+	  into new File(autoFvtDir, "publish/servers/${server}/test-apps")
+	}
   
   }
 
