--- a/dev/com.ibm.ws.microprofile.metrics.1.1_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/com.ibm.ws.microprofile.metrics.1.1_fat_tck/publish/tckRunner/tck/pom.xml
@@ -14,8 +14,15 @@
     <version>1.1-SNAPSHOT</version>
     <name>MicroProfile Metrics TCK Runner 1.1 TCK Module</name>
 
+    <repositories>
+        <repository>
+            <id>theossrepo</id> 
+            <url>https://oss.sonatype.org/content/repositories/orgeclipsemicroprofile-1455</url>
+        </repository>
+    </repositories>
+
     <properties>
-        <microprofile.metrics.version>1.1.3</microprofile.metrics.version>
+        <microprofile.metrics.version>1.1.4-RC1</microprofile.metrics.version>
         <arquillian.version>1.1.13.Final</arquillian.version>
 
         <!-- the below is used in arquillian.xml -->
