--- a/dev/com.ibm.ws.microprofile.metrics.2.0_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/com.ibm.ws.microprofile.metrics.2.0_fat_tck/publish/tckRunner/tck/pom.xml
@@ -14,8 +14,15 @@
     <version>2.0</version>
     <name>MicroProfile Metrics TCK Runner 2.0.1 TCK Module</name>
 
+    <repositories>
+        <repository>
+            <id>theossrepo</id> 
+            <url>https://oss.sonatype.org/content/repositories/orgeclipsemicroprofile-1454</url>
+        </repository>
+    </repositories>
+
     <properties>
-        <microprofile.metrics.version>2.0.4</microprofile.metrics.version>
+        <microprofile.metrics.version>2.0.5-RC1</microprofile.metrics.version>
         <arquillian.version>1.1.13.Final</arquillian.version>
 
         <!-- the below is used in arquillian.xml -->
