--- a/dev/wlp-jakartaee-transform/rules/jakarta-bundles.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-bundles.properties
@@ -33,3 +33,4 @@ com.ibm.ws.security.social=io.openliberty.security.social,,"Liberty Security Soc
 com.ibm.ws.security.openidconnect.client=io.openliberty.security.openidconnect.internal.client,,"Liberty Security OpenID Connect Client 1.0","Liberty Security OpenID Connect Client 1.0; Jakarta Enabled"
 com.ibm.ws.security.openidconnect.clients.common=io.openliberty.security.openidconnect.internal.clients.common,,"Liberty Security OpenID Connect Clients Common Code 1.0","Liberty Security OpenID Connect Clients Common Code 1.0; Jakarta Enabled"
 com.ibm.ws.security.openidconnect.server=io.openliberty.security.openidconnect.internal.server,,"Liberty Security OpenID Connect Server 1.0","Liberty Security OpenID Connect Server 1.0; Jakarta Enabled"
+com.ibm.ws.webservices.handler=io.openliberty.webservices.handler,,"WebSphere WebServices Global Handler service","WebSphere WebServices Global Handler service; Jakarta Enabled"
