SAML Fat updates to use correct version of Shibboleth

--- a/dev/com.ibm.ws.security.saml.sso_fat.common/SAMLCommon.gradle
+++ b/dev/com.ibm.ws.security.saml.sso_fat.common/SAMLCommon.gradle
@@ -83,11 +83,16 @@ task copyShibbolethServer (dependsOn: [':com.ibm.ws.security.fat.common:assemble
 //    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/files/policyFiles')
 //    into new File(autoFvtDir, "publish/servers/${serverName}/policyFiles")
 //  }
-    // copyShibbolethTestAppFilesToServer
-    copy {
-      from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp.war')
-      into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
-    }
+    // copyShibbolethTestAppFilesToServer  (copy both 3.3.1 and 4.1.0 and let the tests decide at runtime which to use)
+   	copy {
+	  from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp-war-3.3.1.war')
+ 	  into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
+	}
+	copy {
+	  from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp-war-4.1.0.war')
+	  into new File(autoFvtDir, "publish/servers/${serverName}/test-apps")
+	}
+ 
     // copySecurityKeysToServer
     copy {
       from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'securitykeys')
@@ -113,7 +118,7 @@ task copyShibKeys () {
    }
 }
 
-task copyApache (dependsOn: [':com.ibm.ws.security.fat.common:assemble', ':com.ibm.ws.security.saml.sso_fat.common:assemble', 'copyShibKeys']) {
+task copyApache () {
   doLast {
     /*
      * Copy the local ApacheDS LDAP instances. 
@@ -123,6 +128,13 @@ task copyApache (dependsOn: [':com.ibm.ws.security.fat.common:assemble', ':com.i
       into autoFvtDir
       include 'apacheds-2.0.0-M15/**'
     }
+  }  
+}
+
+task copyShibbolethIdpConfig (dependsOn: [':com.ibm.ws.security.fat.common:assemble', ':com.ibm.ws.security.saml.sso_fat.common:assemble', 'copyShibKeys']) {
+
+  doLast {
+
     copy {
       from project(':com.ibm.ws.security.saml.sso_fat.common').buildDir
       into autoFvtDir
