--- a/dev/com.ibm.ws.jsf.2.2_fat/build.gradle
+++ b/dev/com.ibm.ws.jsf.2.2_fat/build.gradle
@@ -19,7 +19,7 @@ dependencies {
       'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
       'org.brotli:dec:0.1.2',
       'org.apache.commons:commons-lang3:3.8',
-      'commons-io:commons-io:2.6',
+      project(':com.ibm.ws.org.apache.commons.io'),
       'commons-codec:commons-codec:1.11',
       'org.apache.httpcomponents:httpmime:4.5.3',
       project(':com.ibm.ws.org.apache.httpcomponents'),
