--- a/dev/com.ibm.ws.security.fat.common.jwt/build.gradle
+++ b/dev/com.ibm.ws.security.fat.common.jwt/build.gradle
@@ -21,7 +21,7 @@ dependencies {
         'org.seleniumhq.webdriver:webdriver-common:0.9.7376',
         'org.brotli:dec:0.1.2',
         'xalan:xalan:2.7.2',
-        'commons-io:commons-io:2.6',
+        project(':com.ibm.ws.org.apache.commons.io'),
 				'org.apache.commons:commons-lang3:3.5',
 				'org.apache.commons:commons-lang3:3.8',
 				project(':com.ibm.ws.org.apache.httpcomponents'),
