--- a/dev/com.ibm.ws.webcontainer.servlet.3.1_fat/build.gradle
+++ b/dev/com.ibm.ws.webcontainer.servlet.3.1_fat/build.gradle
@@ -17,7 +17,7 @@ dependencies {
       'org.brotli:dec:0.1.2',
       'xerces:xercesImpl:2.11.0',
       'xalan:xalan:2.7.2',
-      'commons-io:commons-io:2.6',
+      project(':com.ibm.ws.org.apache.commons.io'),
       'net.sourceforge.htmlunit:htmlunit-core-js:2.44.0',
       'org.apache.commons:commons-lang3:3.8',
       'commons-codec:commons-codec:1.11',
