--- a/dev/com.ibm.ws.wssecurity_fat.wsscxf.saml/build.gradle
+++ b/dev/com.ibm.ws.wssecurity_fat.wsscxf.saml/build.gradle
@@ -8,6 +8,7 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
+apply from: '../com.ibm.ws.security.saml.sso_fat.common/ShibbolethCommon.gradle'
 
 dependencies {
   requiredLibs project(':com.ibm.ws.wssecurity.fat.utils.common'),
@@ -227,7 +228,7 @@ assemble {
   dependsOn samlwsstemplateswithep_WAR
 }
 
-
+addRequiredLibraries.dependsOn copyShibbolethIdpConfig, copyShibbolethServer
 
 autoFVT.doLast {
 
@@ -420,43 +421,4 @@ autoFVT.doLast {
     }
   }
   
-  servers = [
-    'com.ibm.ws.security.saml.sso-2.0_fat.shibboleth'
-  ]
-
-  servers.each { server ->
-
-    copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/servers/' + server + '/configs')
-    into new File(autoFvtDir, 'publish/servers/' + server + '/configs')
-    }
-  
-    copy {
-    from new File(project(':com.ibm.ws.security.saml.sso_fat.common').projectDir, 'publish/servers/' + server + '/bootstrap.properties')
-    into new File(autoFvtDir, 'publish/servers/' + server + '/')
-    }
-    
-    copy { 
-      from project.file('securitykeys')
-      include '**'
-      into new File(autoFvtDir, 'publish/servers/' + server + '/')
-    }
-
-    copy {
-      from new File(project(':com.ibm.ws.security.fat.common').buildDir, 'test-application/testmarker.war')
-      into new File(autoFvtDir, 'publish/servers/' + server + '/dropins')
-    }
-    
-    // copyShibbolethTestAppFilesToServer  (copy both 3.3.1 and 4.1.0 and let the tests decide at runtime which to use)
-   	copy {
-	  from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp-war-3.3.1.war')
- 	  into new File(autoFvtDir, "publish/servers/${server}/test-apps")
-	}
-	copy {
-	  from new File(project(':com.ibm.ws.security.saml.sso_fat.common').buildDir, 'test-application/idp-war-4.1.0.war')
-	  into new File(autoFvtDir, "publish/servers/${server}/test-apps")
-	}
-    
-  }
-
 }
