--- a/dev/io.openliberty.wsoc.internal_fat/build.gradle
+++ b/dev/io.openliberty.wsoc.internal_fat/build.gradle
@@ -13,16 +13,19 @@ dependencies {
   requiredLibs 'net.sf.jtidy:jtidy:9.3.8',
     'org.apache.httpcomponents.client5:httpclient5:5.0',
     'org.apache.httpcomponents.core5:httpcore5:5.0',
-    'org.eclipse.jetty.websocket:websocket-client:9.2.2.v20140723',
-    'org.eclipse.jetty.websocket:websocket-api:9.2.2.v20140723',
-    'org.eclipse.jetty.websocket:websocket-common:9.2.2.v20140723',
     'javax.websocket:javax.websocket-api:1.0',
     project(':io.openliberty.org.apache.commons.codec'),
-    'org.eclipse.jetty.websocket:javax-websocket-client-impl:9.2.2.v20140723',
-    'org.eclipse.jetty:jetty-io:9.2.2.v20140723',
-    'org.eclipse.jetty:jetty-util:9.2.2.v20140723',
     project(':com.ibm.ws.org.apache.httpcomponents'),
-    project(':io.openliberty.org.apache.commons.logging')
+    project(':io.openliberty.org.apache.commons.logging'),
+    'org.eclipse.jetty:jetty-io:9.4.39.v20210325',
+    'org.eclipse.jetty:jetty-util:9.4.39.v20210325',
+    'org.eclipse.jetty.websocket:websocket-common:9.4.39.v20210325',
+    'org.eclipse.jetty.websocket:javax-websocket-client-impl:9.4.39.v20210325',
+    'javax.websocket:javax.websocket-client-api:1.0',
+    'org.eclipse.jetty.websocket:websocket-client:9.4.39.v20210325',
+    'org.eclipse.jetty:jetty-http:9.4.39.v20210325',
+    'org.eclipse.jetty:jetty-client:9.4.39.v20210325',
+    'org.eclipse.jetty.websocket:websocket-api:9.4.39.v20210325'
 }
 
 addRequiredLibraries {
