Do not merge - PackageCommand Debug

--- a/dev/wlp.lib.extract_fat/build.gradle
+++ b/dev/wlp.lib.extract_fat/build.gradle
@@ -10,7 +10,7 @@ task addRequiredFiles(type: Copy) {
     }
   }
 }
-
+build.dependsOn ':wlp.lib.extract:assemble'
 autoFVT {
   dependsOn addRequiredFiles
 }
