--- a/dev/com.ibm.ws.security.oidc.client_fat/publish/servers/com.ibm.ws.security.openidconnect.client-1.0_fat.opWithStub/bootstrap.properties
+++ b/dev/com.ibm.ws.security.oidc.client_fat/publish/servers/com.ibm.ws.security.openidconnect.client-1.0_fat.opWithStub/bootstrap.properties
@@ -8,12 +8,16 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
+bootstrap.include=../testports.properties
 
-# these properties should only be honored when useSystemPropertiesForHttpClientConnections config attribute set
--Dhttp.proxyPort=34567
--Dhttp.proxyHost=1.2.3.4
--Dhttps.proxyPort=34567
--Dhttps.proxyHost=1.2.3.4
+com.ibm.ws.logging.trace.specification=*=info=enabled:\
+com.ibm.ws.security.oauth*=all=enabled:\
+com.ibm.ws.security.openidconnect*=all=enabled:\
+com.ibm.ws.security.jwt*=all=enabled:\
+com.ibm.ws.webcontainer.security.*=all=enabled:\
+com.ibm.oauth.*=all=enabled:\
+com.ibm.wsspi.security.oauth20.*=all=enabled:\
+org.apache.http.client.*=all
 
-# beta fence for additional sigalg & encryption testing
-#-Dcom.ibm.ws.beta.edition=true
+com.ibm.ws.logging.max.file.size=0
+ds.loglevel=debug
