Add test for allowQueryParamWithNoEqual change

--- a/dev/com.ibm.ws.webcontainer.servlet.4.0_fat/test-applications/Servlet5TestApp.war/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.webcontainer.servlet.4.0_fat/test-applications/Servlet5TestApp.war/resources/WEB-INF/web.xml
@@ -18,4 +18,16 @@
 		<url-pattern>/snoop5</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<display-name>Query Servlet</display-name>
+		<servlet-name>Query Servlet</servlet-name>
+		<servlet-class>servlet5snoop.war.servlets.QueryServlet</servlet-class>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Query Servlet</servlet-name>
+		<url-pattern>/query</url-pattern>
+	</servlet-mapping>
+
 </web-app>
