--- a/dev/com.ibm.ws.security.oidc.server_fat.oidc/build.gradle
+++ b/dev/com.ibm.ws.security.oidc.server_fat.oidc/build.gradle
@@ -158,6 +158,6 @@ autoFVT.doLast {
   copy {
     from new File(project(':com.ibm.ws.security.oauth.oidc_fat.common').projectDir, 'securitykeys')
     into new File(autoFvtDir, 'securitykeys')
-    include 'commonLDAPUser1.jks', 'commonSslClientDefault.jks'
+    include 'commonLDAPUser1.p12', 'commonSslClientDefault.jks'
   }
 }
