back to actual test servlet
Signed-off-by: Gordon Hutchison <Gordon.Hutchison@gmail.com>

--- a/dev/com.ibm.ws.wsbytebuffer_fat/publish/servers/FATServer/bootstrap.properties
+++ b/dev/com.ibm.ws.wsbytebuffer_fat/publish/servers/FATServer/bootstrap.properties
@@ -9,4 +9,5 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bootstrap.include=../testports.properties
-com.ibm.ws.logging.trace.specification=*=info
+com.ibm.ws.logging.trace.specification=*=info:HealthAction=all:HealthAnalyzer=all:TCPChannel=all:HTTPChannel=all:GenericBNF=all:ChannelFramework=all
+	
