Adding seperate ee9 api/api bundle projects

--- a/dev/wlp-gradle/subprojects/assemble.gradle
+++ b/dev/wlp-gradle/subprojects/assemble.gradle
@@ -24,8 +24,9 @@ if (bnd('publish.tool.jar', '').empty && !parseBoolean(bnd('publish.wlp.jar.disa
             dependsOn jakartaeeTransform
         }
         from project.buildDir
-        into buildImage.file('wlp/' + bnd('publish.wlp.jar.suffix', 'lib'))
         include bnd('publish.wlp.jar.include', '*.jar')
+        exclude bnd('publish.wlp.jar.exclude','')
+        into buildImage.file('wlp/' + bnd('publish.wlp.jar.suffix', 'lib'))
         def hasIFIXHeaders = [:]
         def fullVersions = [:]
         if (parseBoolean(bnd('publish.wlp.jar.rename', 'true'))) {
