--- a/dev/com.ibm.ws.security.oauth.oidc_fat.common/build.gradle
+++ b/dev/com.ibm.ws.security.oauth.oidc_fat.common/build.gradle
@@ -38,7 +38,7 @@ dependencies {
    requiredLibs project(':com.ibm.ws.security.fat.common')            
 }
 
-
+addRequiredLibraries.dependsOn addJakartaTransformer
 
 /*
  * This is where all application ZIP and WARs will be built.
